box-model fix on mobile

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,3 +5,6 @@
 body {
   font-family: "Roboto", sans-serif;
 }
+* {
+  box-sizing: border-box;
+}
